# lan-valley

./: .gitignore  AGENTS.md  Cargo.toml  GAMEPLAY.md  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/game/: building.rs  cooking.rs  grid.rs  inventory.rs  mod.rs  save.rs  state.rs  types.rs
src/ui/: mod.rs  render.rs  styles.rs
