[package]
name = "lan_valley"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP API (for future Web UI)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform paths
directories = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.9"

# Local IP detection
local-ip-address = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"
